appId: com.mf.example.host
---
- launchApp:
    clearState: true
- waitForAnimationToEnd

# Check Host Info
- assertVisible:
    id: "host-app-info"
- copyTextFrom:
    id: "host-lodash"
- assertTrue:
    condition: ${maestro.copiedText === "4.16.6"}

# Check Mini App Info
- assertNotVisible:
    id: "mini-info"
- tapOn:
    id: "load-mini-button"
- assertVisible:
    id: "mini-info"
- copyTextFrom:
    id: "mini-lodash"
- assertTrue:
    condition: ${maestro.copiedText === "4.17.21"}

# Check Nested Mini App Info
- assertVisible:
    id: "nested-mini-info"
- copyTextFrom:
    id: "nested-mini-lodash"
- assertTrue:
    condition: ${maestro.copiedText === "4.16.6"}
